--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18",
     "react-intersection-observer": "^9.8.2",
     "react-photo-view": "^1.2.6",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.1.1",
     "tailwindcss-animated": "^1.0.1"
   },
