--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.3",
     "emailjs": "^4.0.3",
     "env": "^0.0.2",
+    "framer-motion": "^11.11.9",
     "next": "14.1.4",
     "nodemailer": "^6.9.14",
     "react": "^18",
