--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "emailjs": "^4.0.3",
     "env": "^0.0.2",
     "framer-motion": "^11.11.9",
-    "next": "14.1.4",
+    "next": "^14.2.16",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-countup": "^6.5.3",
